Add default consent and CDN region (com/eu) configurable settings * Move uc.js loading to head.html to ensure loading after default consent

--- a/pixel/body.html
+++ b/pixel/body.html
@@ -1,1 +1,1 @@
-<script>window.__cookiebot_id = "{{settings.cbid}}"</script>
+<script>window.__cookiebot_id = "{{settings.cbid}}"; window.__cookiebot_cdn = "{{settings.cdn}}" || "com"</script>
